fix style when code block file title is too long, make it scroll but not visible

--- a/css/prism.css
+++ b/css/prism.css
@@ -8,6 +8,7 @@
 /* Code title styles */
 .remark-code-title {
   @apply rounded-t bg-gray-700 px-5 py-3 font-mono text-sm font-bold text-gray-200 dark:bg-gray-800;
+  overflow: scroll;
 }
 
 .remark-code-title + div > pre {
